name:                metricsd-client
version:             0.1
synopsis:            A client for the metrics aggregator Metricsd (which in turn is a replacement for Statsd).
license:             BSD3
license-file:        LICENSE
author:              Jan Vornberger
maintainer:          jan.vornberger@informatik.uni-oldenburg.de
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Network.Metricsd.Client
  build-depends:       base == 4.*, network == 2.3.*
  ghc-options:         -O -Wall
